--- a/clone.html
+++ b/clone.html
@@ -1,8 +1,6 @@
 <html>
   <body>
-    <h1>
-    I am a very convincing clone of your website.
-    </h1>
+    <h1>very convincing clone of behance.</h1>
     <p> put in your password, because we lost it in a fire: <input type="password"></p>
   </body>
 </html>
