window.opener attacker refinements

--- a/clone.html
+++ b/clone.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1>very convincing clone of behance.</h1>
+    <h1>very convincing clone of behance</h1>
     <p> put in your password, because we lost it in a fire: <input type="password"></p>
   </body>
 </html>
